[package]
name = "escrow-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-account-info       = "3.1"
solana-program-entrypoint = "3.1.0"
solana-program-error      = "3.0"
solana-pubkey             = "4.0"

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(feature, values("custom-heap", "custom-panic"))',
    'cfg(target_os, values("solana"))',
]
